--- a/about.html
+++ b/about.html
@@ -7,5 +7,5 @@ title: "About"
 <section class="content">
   <h1>{{ site.name }}</h1>
 
-  <p>Instruções e dicas para hackear no Hackfest Contra a Corrupção 2017.</p>
+  <p>Instruções e dicas para hackear no Hackfest por uma Sociedade Politicamente Participativa, 2018.</p>
 </section>
